Fix links to question resources, and spacing issues
Discussion here: https://groups.google.com/g/numbas-users/c/hrBZIorSeyg/m/QKRJ6JfVCgAJ

--- a/numbas.css
+++ b/numbas.css
@@ -1306,7 +1306,8 @@ Copyright 2011-25 Newcastle University
 
     exam-container {
         display: block;
-        min-height: var(--exam-height, 0);
+        /* min-height: var(--exam-height, 0); */
+        min-height: 0; /* weh avoid extra space below question.;*/
     }
 
     #loading {
